fix password checker

--- a/bizopt/BO/templates/login.html
+++ b/bizopt/BO/templates/login.html
@@ -145,7 +145,7 @@ button:focus {
                   <h3>Вы успешно зарегестрированны</h3>
                   <span>Можете пока порадоваться, ибо другого ничего нет</span>
                </div>
-               <div style="overflow:auto;" id="nextprevious">
+               <div style="overflow:auto;" id="next-previous">
                   <div style="float:right;">
                       <button type="button" id="nextBtn" onclick="nextPrev(1)">
                         <i class="fa fa-angle-double-right"></i>
@@ -161,47 +161,33 @@ button:focus {
 <script type='text/Javascript'>
 let currentTab = 0;
 document.addEventListener("DOMContentLoaded", function (event) {
-
-
 	showTab(currentTab);
-
 });
 
 function showTab(n) {
     let x = document.getElementsByClassName("tab");
     x[n].style.display = "block";
-	if (n === 0) {
-		document.getElementById("prevBtn").style.display = "none";
-	} else {
-		document.getElementById("prevBtn").style.display = "inline";
-	}
-	if (n === (x.length - 1)) {
-		document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-	} else {
-		document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-	}
+	document.getElementById("prevBtn").style.display = "none";
 	fixStepIndicator(n)
 }
 
 function nextPrev(n) {
-	var x = document.getElementsByClassName("tab");
+	let x = document.getElementsByClassName("tab");
 	if (n === 1 && !validateForm()) return false;
 	x[currentTab].style.display = "none";
 	currentTab = currentTab + n;
 	if (currentTab >= x.length) {
 
-		document.getElementById("nextprevious").style.display = "none";
+		document.getElementById("next-previous").style.display = "none";
 		document.getElementById("all-steps").style.display = "none";
 		document.getElementById("register").style.display = "none";
 		document.getElementById("text-message").style.display = "block";
-
-
 	}
 	showTab(currentTab);
 }
 
 function validateForm() {
-    let x, y, i, p1, p2, valid = true;
+    let x, y, i, valid = true;
     x = document.getElementsByClassName("tab");
 	y = x[currentTab].getElementsByTagName("input");
 
