--- a/bizopt/BO/templates/login.html
+++ b/bizopt/BO/templates/login.html
@@ -123,7 +123,7 @@ button:focus {
    <div class="container mt-5">
       <div class="row d-flex justify-content-center align-items-center">
          <div class="col-md-8">
-            <form id="regForm">
+            <form id="regForm" method="POST">
                <h1 id="register">Survey Form Log</h1>
                 <div class="all-steps" id="all-steps">
                    <span class="step">
@@ -139,7 +139,6 @@ button:focus {
                       <input placeholder="Пароль" type="password" oninput="this.className = ''" id="password">
                   </p>
                </div>
-
                <div class="thanks-message text-center" id="text-message">
                   <img src="https://i.imgur.com/O18mJ1K.png" width="100" class="mb-4">
                   <h3>Вы успешно зарегестрированны</h3>
