--- a/bizopt/BO/templates/login.html
+++ b/bizopt/BO/templates/login.html
@@ -123,30 +123,29 @@ button:focus {
    <div class="container mt-5">
       <div class="row d-flex justify-content-center align-items-center">
          <div class="col-md-8">
-            <form id="regForm" method="POST">
+            <form id="regForm">
                <h1 id="register">Survey Form Log</h1>
-                <div class="all-steps" id="all-steps">
-                   <span class="step">
-                       <i class="fa fa-user"></i>
-                   </span>
-               </div>
+
                <div class="tab">
                   <p>
                       <br>
-                      <input placeholder="Логин" oninput="this.className = ''" id="login">
+                      <input placeholder="Почта" oninput="this.className = ''" id="email">
                       <br>
                       <br>
-                      <input placeholder="Пароль" type="password" oninput="this.className = ''" id="password">
+                      <input placeholder="Пароль" oninput="this.className = ''" id="password">
                   </p>
                </div>
+
                <div class="thanks-message text-center" id="text-message">
                   <img src="https://i.imgur.com/O18mJ1K.png" width="100" class="mb-4">
                   <h3>Вы успешно зарегестрированны</h3>
                   <span>Можете пока порадоваться, ибо другого ничего нет</span>
                </div>
-               <div style="overflow:auto;" id="next-previous">
+               <div style="overflow:auto;" id="nextprevious">
                   <div style="float:right;">
-                      <button type="button" id="nextBtn" onclick="nextPrev(1)">
+                      <button type="button" id="prevBtn" >
+                        <i class="fa fa-angle-double-left"></i>
+                        </button> <button type="button" id="nextBtn"  >
                         <i class="fa fa-angle-double-right"></i>
                       </button>
                   </div>
@@ -160,42 +159,61 @@ button:focus {
 <script type='text/Javascript'>
 let currentTab = 0;
 document.addEventListener("DOMContentLoaded", function (event) {
+
+
 	showTab(currentTab);
+
 });
 
 function showTab(n) {
     let x = document.getElementsByClassName("tab");
     x[n].style.display = "block";
-	document.getElementById("prevBtn").style.display = "none";
+	if (n == 0) {
+		document.getElementById("prevBtn").style.display = "none";
+	} else {
+		document.getElementById("prevBtn").style.display = "inline";
+	}
+	if (n == (x.length - 1)) {
+		document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
+	} else {
+		document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
+	}
 	fixStepIndicator(n)
 }
 
 function nextPrev(n) {
-	let x = document.getElementsByClassName("tab");
-	if (n === 1 && !validateForm()) return false;
+	var x = document.getElementsByClassName("tab");
+	if (n == 1 && !validateForm()) return false;
 	x[currentTab].style.display = "none";
 	currentTab = currentTab + n;
 	if (currentTab >= x.length) {
 
-		document.getElementById("next-previous").style.display = "none";
+		document.getElementById("nextprevious").style.display = "none";
 		document.getElementById("all-steps").style.display = "none";
 		document.getElementById("register").style.display = "none";
 		document.getElementById("text-message").style.display = "block";
+
+
 	}
 	showTab(currentTab);
 }
 
 function validateForm() {
-    let x, y, i, valid = true;
+    let x, y, i, p1, p2, valid = true;
     x = document.getElementsByClassName("tab");
 	y = x[currentTab].getElementsByTagName("input");
-
+    p1 = document.getElementById("password").value;
+    p2 = document.getElementById("sug_password").value;
 	for (i = 0; i < y.length; i++) {
 		if (y[i].value == "") {
 			y[i].className += " invalid";
 			valid = false;
 		}
 	}
+    if(p1 != p2){
+        alert("Пароли не совпадают")
+        valid = false;
+    }
 	if (valid) {
 		document.getElementsByClassName("step")[currentTab].className += " finish";
 	}
