--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -6,4 +6,11 @@
     <a class="nav-link active" aria-current="page" href="{{ item.link }}">{{ item.text }}</a>&nbsp;
 </li>
 {% endfor %}
+
+<!--<div class="dws">-->
+<!--  <a href="#" class="butt">Войти</a>-->
+<!--</div>-->
+# кнопка войти
+<a href="#" class="btn">Войти</a>
+
 <hr>
