--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -16,17 +16,10 @@
 	font-size: 20px;
 	font-family: monospace;
 	color: #fff;
-	background: linear-gradient(to left, #f5af19, #f12711, #f5af19);
-	text-decoration: none;
-	padding: 0px 20px;
-	border-radius: 10px;
-	background-size: 200%;
-	transition: .5s;
 }
-
-.btn:hover {
-	background-position: right;
-}
+<!--.btn:hover {-->
+<!--	background-position: right;-->
+<!--}-->
 </style>
 
 
