--- a/bizopt/BO/templates/login.html
+++ b/bizopt/BO/templates/login.html
@@ -135,12 +135,6 @@ button:focus {
                       <input placeholder="Пароль" oninput="this.className = ''" id="password">
                   </p>
                </div>
-
-               <div class="thanks-message text-center" id="text-message">
-                  <img src="https://i.imgur.com/O18mJ1K.png" width="100" class="mb-4">
-                  <h3>Вы успешно зарегестрированны</h3>
-                  <span>Можете пока порадоваться, ибо другого ничего нет</span>
-               </div>
                <div style="overflow:auto;" id="nextprevious">
                   <div style="float:right;">
                       <button type="button" id="prevBtn" >
@@ -186,14 +180,8 @@ function nextPrev(n) {
 	if (n == 1 && !validateForm()) return false;
 	x[currentTab].style.display = "none";
 	currentTab = currentTab + n;
-	if (currentTab >= x.length) {
-
-		document.getElementById("nextprevious").style.display = "none";
-		document.getElementById("all-steps").style.display = "none";
-		document.getElementById("register").style.display = "none";
-		document.getElementById("text-message").style.display = "block";
-
-
+	if (currentTab === x.length) {
+        window.location='../';
 	}
 	showTab(currentTab);
 }
