--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -175,16 +175,12 @@ button:focus {
                       <input placeholder="Номер телефона" oninput="this.className = ''" id="phone">
                   </p>
                </div>
-               <div class="thanks-message text-center" id="text-message">
-                  <img src="https://i.imgur.com/O18mJ1K.png" width="100" class="mb-4">
-                  <h3>Вы успешно зарегестрированны</h3>
-                  <span>Можете пока порадоваться, ибо другого ничего нет</span>
-               </div>
                <div style="overflow:auto;" id="next-previous">
                   <div style="float:right;">
                       <button type="button" id="prevBtn" onclick="nextPrev(-1)">
                         <i class="fa fa-angle-double-left"></i>
-                        </button> <button type="button" id="nextBtn" onclick="nextPrev(1)">
+                      </button>
+                      <button type="button" id="nextBtn" onclick="nextPrev(1)">
                         <i class="fa fa-angle-double-right"></i>
                       </button>
                   </div>
@@ -228,11 +224,9 @@ function nextPrev(n) {
 	if (n === 1 && !validateForm()) return false;
 	x[currentTab].style.display = "none";
 	currentTab = currentTab + n;
-	if (currentTab >= x.length) {
-		document.getElementById("next-previous").style.display = "none";
-		document.getElementById("all-steps").style.display = "none";
-		document.getElementById("register").style.display = "none";
-		document.getElementById("text-message").style.display = "block";
+    console.log(currentTab, x.length)
+	if (currentTab === x.length) {
+        window.location='../';
 	}
 	showTab(currentTab);
 }
