fix login and signin

--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -10,16 +10,16 @@
   </div>
 </div>
 
-<style type="text/css">
+<style>
 
 .btn {
 	font-size: 20px;
 	font-family: monospace;
 	color: #fff;
 }
-<!--.btn:hover {-->
-<!--	background-position: right;-->
-<!--}-->
+/*.btn:hover {*/
+/*  background-position: right;*/
+/*}*/
 </style>
 
 
