--- a/bizopt/BO/templates/creators.html
+++ b/bizopt/BO/templates/creators.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Инвентарь</title>
+    <title>Title</title>
 </head>
 <body>
-{% include 'menu.html' %}
-<h1>Инвентарь</h1>
+
 </body>
 </html>
