added menu generation with views class

--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -25,7 +25,7 @@
         {% block content %}
         {% endblock %}
 
-        <style>
+        <style type="text/css">
 
        .main_header {
         padding-left: 30%;
