--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "menu.html" %}
 
 {% block content %}
 
@@ -10,17 +10,7 @@
   </div>
 </div>
 
-<style>
 
-.btn {
-	font-size: 20px;
-	font-family: monospace;
-	color: #fff;
-}
-/*.btn:hover {*/
-/*  background-position: right;*/
-/*}*/
-</style>
 
 
 {% endblock %}
