--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,12 +1,75 @@
-{% for item in menu %}
-    
-<li class="nav-item">
-    
-    <a class="nav-link active" aria-current="page" href="{{ item.link }}">{{ item.text }}</a>&nbsp;
-</li>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>{{ title }}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-# кнопка войти
-<a href="#" class="btn">Войти</a>
+    </head>
 
-<hr>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+              <ul class="navbar-nav">
+
+                {% for item in menu %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" style="color: white;" href="{{item.link}}">{{item.text}}</a>&nbsp;
+                    </li>
+                {% endfor %}
+
+{## кнопка войти#}
+{#<a href="#" class="btn">Войти</a>#}
+                </ul>
+            </div>
+          </div>
+        </nav>
+
+
+        {% block content %}
+        {% endblock %}
+
+        <style type="text/css">
+
+       .main_header {
+        padding-left: 30%;
+           font-size: 60px;
+       }
+
+        body {
+            width: 100vw;
+            height: 100vh;
+
+        }
+
+        .margin{
+            margin-left: 15%;
+            margin-bottom: 20px;
+        }
+        .text{
+            width: 40%;
+        }
+
+     </style>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </body>
+</html>
+
+{#<style>#}
+{##}
+{#    .btn{#}
+{#        margin: 0 auto;#}
+{#        transition: 0.5s;#}
+{#        font-size: 20px;#}
+{#        font-family: monospace;#}
+{#        color: #fff;#}
+{#    }#}
+{#    .btn:hover{#}
+{#        background-color: white;#}
+{#        color: #000;#}
+{#    }#}
+{#</style>#}
