--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,62 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>{{ title }}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <title>{{ title }}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    </head>
 
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-              <ul class="navbar-nav">
+</head>
+
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+            <ul class="navbar-nav">
 
                 {% for item in menu %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" style="color: white;" href="{{item.link}}">{{item.text}}</a>&nbsp;
+                        <a class="nav-link active" aria-current="page" style="color: white;"
+                           href="{{ item.link }}">{{ item.text }}</a>&nbsp;
                     </li>
+                    {% if item.text == "Профиль" %}
+                        <div class="dropdown">
+                            <a class="btn btn-secondary dropdown-toggle" href="{{ item.link }}" role="button"
+                               id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                {{ item.name }}
+                            </a>
+                            <ul style="text-align: center" class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+                                {% if item.positoin == "in" %}
+                                <li style="display: flex"><a class="dropdown-item" href="{{ item.link }}">{{ item.name }}</a></li>
+                            </ul>
+                        </div>
+                                {% endif %}
+                    {% endif %}
                 {% endfor %}
 
-{## кнопка войти#}
-{#<a href="#" class="btn">Войти</a>#}
-                </ul>
-            </div>
-          </div>
-        </nav>
+                {## кнопка войти#}
+                {#<a href="#" class="btn">Войти</a>#}
+            </ul>
+        </div>
+    </div>
+</nav>
 
 
-        {% block content %}
-        {% endblock %}
+{% block content %}
+{% endblock %}
 
-        <style type="text/css">
+<style type="text/css">
 
-       .main_header {
+    .main_header {
         padding-left: 30%;
-           font-size: 60px;
-       }
+        font-size: 60px;
+    }
 
-        body {
-            width: 100vw;
-            height: 100vh;
+    body {
+        width: 100vw;
+        height: 100vh;
 
-        }
+    }
 
-        .margin{
-            margin-left: 15%;
-            margin-bottom: 20px;
-        }
-        .text{
-            width: 40%;
-        }
+    .margin {
+        margin-left: 15%;
+        margin-bottom: 20px;
+    }
 
-     </style>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+    .text {
+        width: 40%;
+    }
+
+</style>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
 </html>
 
 {#<style>#}
