--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -20,18 +20,19 @@
             <ul class="navbar-nav">
 
                 {% for item in menu %}
+                {% if item.text != "Профиль" %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" style="color: white;"
                            href="{{ item.link }}">{{ item.text }}</a>&nbsp;
                     </li>
-                    {% if item.text == "Профиль" %}
+                    {% else %}
                         <div class="dropdown">
                             <a class="btn btn-secondary dropdown-toggle" href="{{ item.link }}" role="button"
                                id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                {{ item.name }}
+                                {{ item.text }}
                             </a>
                             <ul style="text-align: center" class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
-                                {% if item.positoin == "in" %}
+                                {% if item.position == "in" %}
                                 <li style="display: flex"><a class="dropdown-item" href="{{ item.link }}">{{ item.name }}</a></li>
                             </ul>
                         </div>
