--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -64,52 +64,68 @@
     <div class="container rounded bg-white mt-5 mb-5">
         <div class="row">
             <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
-                        width="150px"
-                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span
-                        class="font-weight-bold">Edogaru</span><span
-                        class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                    <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                    <span class="font-weight-bold">тут будет имя
+                    </span>
+                    <span class="text-black-50">тут будетпочта</span>
+                    <span> </span>
+                </div>
             </div>
-            <div class="col-md-5 border-right">
+            <div id="main_change" class="col-md-8">
                 <div class="p-3 py-5">
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-right">Настройки профиля</h4>
+                        <div class="form-check form-switch">
+                            <label class="form-check-label" for="creatorSwitcher">Я создатель</label>
+                            <input class="form-check-input" style="margin" type="checkbox" id="creatorSwitcher" onchange="isCreator()">
+                          </div>
                     </div>
                     <div class="row mt-2">
-                        <div class="col-md-6"><label class="labels">Имя</label><input type="text" class="form-control"
-                                placeholder="имя" value=""></div>
-                        <div class="col-md-6"><label class="labels">Фамилия</label><input type="text"
-                                class="form-control" value="" placeholder="Фамилия"></div>
+                        <div class="col-md-6">
+                            <label class="labels">Имя</label>
+                            <input type="text" class="form-control" placeholder="имя" value=""></div>
+                        <div class="col-md-6">
+                            <label class="labels">Фамилия</label>
+                            <input type="text" class="form-control" value="" placeholder="Фамилия"></div>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-12"><label class="labels">Номер телефона</label><input type="text"
-                                class="form-control" placeholder="Номер телефона" value=""></div>
-                        <div class="col-md-12"><label class="labels">Город</label><input type="text" class="form-control"
-                                placeholder="Город" value=""></div>
-                        <div class="col-md-12"><label class="labels">Почта</label><input type="text"
-                                class="form-control" placeholder="Почта" value=""></div>
-                        <div class="col-md-12"><label class="labels">Education</label><input type="text"
-                                class="form-control" placeholder="education" value=""></div>
+                        <div class="col-md-12">
+                            <label class="labels">Номер телефона</label>
+                            <input type="text" class="form-control" placeholder="Номер телефона" value=""></div>
+                        <div class="col-md-12">
+                            <label class="labels">Город</label>
+                            <input type="text" class="form-control" placeholder="Город" value=""></div>
+                        <div class="col-md-12">
+                            <label class="labels">Почта</label>
+                            <input type="text" class="form-control" placeholder="Почта" value=""></div>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-6"><label class="labels">Country</label><input type="text"
-                                class="form-control" placeholder="country" value=""></div>
-                        <div class="col-md-6"><label class="labels">State/Region</label><input type="text"
-                                class="form-control" value="" placeholder="state"></div>
+                        <div class="col-md-6">
+                            <label class="labels">Страна</label>
+                            <input type="text" class="form-control" placeholder="Страна" value=""></div>
+                        <div class="col-md-6">
+                            <label class="labels">Город/Регион</label>
+                            <input type="text" class="form-control" value="" placeholder="Город"></div>
                     </div>
-                    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save
-                            Profile</button></div>
+                    <div class="mt-5 text-center">
+                        <button class="btn btn-primary profile-button" type="submit">Сохранить</button>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="display: none;" id="creator">
                 <div class="p-3 py-5">
-                    <div class="d-flex justify-content-between align-items-center experience"><span>Edit
-                            Experience</span><span class="border px-3 p-1 add-experience"><i
-                                class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
-                    <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text"
-                            class="form-control" placeholder="experience" value=""></div> <br>
-                    <div class="col-md-12"><label class="labels">Additional Details</label><input type="text"
-                            class="form-control" placeholder="additional details" value=""></div>
+                    <div class="d-flex justify-content-between align-items-center experience">
+                        <span>Настройки создателя</span>
+                        <button class="btn btn-outline-success border rounded px-3 p-1" type="submit">
+                            Сохранить
+                        </button>
+                    </div>
+                    <br>
+                    <div class="col-md-12">
+                        <label class="labels">Сфера деятельности</label>
+                        <input type="text" class="form-control" placeholder="" value="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -122,6 +138,17 @@
     <script type='text/javascript' src=''></script>
     <script type='text/Javascript'></script>
 </body>
+<script>
+    function isCreator(){
 
+        if (!document.getElementById('creatorSwitcher').checked){
+            document.getElementById('creator').style.display = 'none';
+            document.getElementById('main_change').className = ('col-md-8');
+        } else{
+            document.getElementById('main_change').className = ('col-md-5 border-right');
+            document.getElementById('creator').style.display = 'inline-block';
+        }
+    }
+</script
 </html>
 {% endblock %}
