--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -63,7 +63,8 @@
         <div class="row">
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                    <img class="rounded-circle mt-5" width="150px"
+                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
                     <span class="font-weight-bold">тут будет имя
                     </span>
                     <span class="text-black-50">тут будетпочта</span>
@@ -75,9 +76,11 @@
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-right">Настройки профиля</h4>
                         {% comment %} <div class="form-check form-switch"> {% endcomment %}
-                            {% comment %} <label class="form-check-label" for="creatorSwitcher">Я создатель</label> {% endcomment %}
-                            {% comment %} <input class="form-check-input" style="margin" type="checkbox" id="creatorSwitcher" onchange="isCreator()"> {% endcomment %}
-                          {% comment %} </div> {% endcomment %}
+                            {% comment %} <label class="form-check-label" for="creatorSwitcher">Я создатель</label>
+                            {% endcomment %}
+                            {% comment %} <input class="form-check-input" style="margin" type="checkbox"
+                                id="creatorSwitcher" onchange="isCreator()"> {% endcomment %}
+                            {% comment %} </div> {% endcomment %}
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-6">
@@ -144,15 +147,16 @@
     <script type='text/Javascript'></script>
 </body>
 <script>
-    function isCreator(){
+    function isCreator() {
 
-        if (!document.getElementById('creatorSwitcher').checked){
+        if (!document.getElementById('creatorSwitcher').checked) {
             document.getElementById('creator').style.display = 'none';
             document.getElementById('main_change').className = ('col-md-8');
-        } else{
+        } else {
             document.getElementById('main_change').className = ('col-md-5 border-right');
             document.getElementById('creator').style.display = 'inline-block';
         }
+    } <
+    /script {
+        % endblock %
     }
-</script
-{% endblock %}
