--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -156,7 +156,5 @@
             document.getElementById('main_change').className = ('col-md-5 border-right');
             document.getElementById('creator').style.display = 'inline-block';
         }
-    } <
-    /script {
-        % endblock %
-    }
+    } <script>
+ {% endblock %}
