--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<!doctype html>
+<html>
 
 <head>
     <meta charset='utf-8'>
@@ -63,8 +65,7 @@
         <div class="row">
             <div class="col-md-3 border-right">
                 <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                    <img class="rounded-circle mt-5" width="150px"
-                        src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                    <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
                     <span class="font-weight-bold">тут будет имя
                     </span>
                     <span class="text-black-50">тут будетпочта</span>
@@ -76,11 +77,9 @@
                     <div class="d-flex justify-content-between align-items-center mb-3">
                         <h4 class="text-right">Настройки профиля</h4>
                         {% comment %} <div class="form-check form-switch"> {% endcomment %}
-                            {% comment %} <label class="form-check-label" for="creatorSwitcher">Я создатель</label>
-                            {% endcomment %}
-                            {% comment %} <input class="form-check-input" style="margin" type="checkbox"
-                                id="creatorSwitcher" onchange="isCreator()"> {% endcomment %}
-                            {% comment %} </div> {% endcomment %}
+                            {% comment %} <label class="form-check-label" for="creatorSwitcher">Я создатель</label> {% endcomment %}
+                            {% comment %} <input class="form-check-input" style="margin" type="checkbox" id="creatorSwitcher" onchange="isCreator()"> {% endcomment %}
+                          {% comment %} </div> {% endcomment %}
                     </div>
                     <div class="row mt-2">
                         <div class="col-md-6">
@@ -110,7 +109,7 @@
                             <input type="text" class="form-control" value="" placeholder="Город"></div>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-12">
+                        <div class="coll-md-3">
                             <label class="labels">Загрузить фото</label>
                             <input id="fileupload" class="form-control" name="myfile" type="file" />
                         </div>
@@ -139,7 +138,6 @@
     </div>
     </div>
     </div>
-    <div style="opacity: 0; width: 1px">asdasdasdasd</div>
     <script type='text/javascript'
         src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
     <script type='text/javascript' src=''></script>
@@ -147,14 +145,16 @@
     <script type='text/Javascript'></script>
 </body>
 <script>
-    function isCreator() {
+    function isCreator(){
 
-        if (!document.getElementById('creatorSwitcher').checked) {
+        if (!document.getElementById('creatorSwitcher').checked){
             document.getElementById('creator').style.display = 'none';
             document.getElementById('main_change').className = ('col-md-8');
-        } else {
+        } else{
             document.getElementById('main_change').className = ('col-md-5 border-right');
             document.getElementById('creator').style.display = 'inline-block';
         }
-    } <script>
- {% endblock %}
+    }
+</script
+</html>
+{% endblock %}
