--- a/bizopt/BO/templates/login.html
+++ b/bizopt/BO/templates/login.html
@@ -123,7 +123,7 @@ button:focus {
    <div class="container mt-5">
       <div class="row d-flex justify-content-center align-items-center">
          <div class="col-md-8">
-            <form id="regForm">
+            <form id="regForm" method="POST">
                <h1 id="register">Survey Form Log</h1>
 			   <div class="all-steps" id="all-steps">
 				<a onclick="surTab(0)"> 
