add files for debuging

--- a/bizopt/BO/templates/creators.html
+++ b/bizopt/BO/templates/creators.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
@@ -11,15 +12,24 @@
   </div>
 </div>
 
-<p>hello</p>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+<button id="showContent1">Резюме</button>
+<button id="showContent2">Товар</button>
+
+<div id="content"></div>
 
 <script>
     
-$(document).ready(function(){
-    $('p').css('border', 'solid 3px red');
-});
-
+    $('#showContent1').on('click', {content: ''}, function(e){
+        var output = e.data.content;
+        $('#content').html({% include "baseProductCard.html" %});
+    });
+    $('#showContent2').on('click', {title:'Заголовок 2', content: 'Содержимое 2...'}, function(e){
+      var output = {% include 'baseResumeCard.html' %};
+      $('#content').html(output);
+    });
+    
 </script>
 
 {% endblock %}
