--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -1,6 +1,7 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 
 {% block content %}
+
 
 
 <head>
@@ -167,7 +168,6 @@
         </div>
       </div>
     </div>
-  </div>
   </div>
   <script type='text/javascript'
     src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
