--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -58,7 +58,7 @@
                         </a>
                         {%else%}
                         <a class="nav-link active" aria-current="page" style="color: white;"
-                            href="/login/">Войти</a>
+                            href="accounts/login/">Войти</a>
 
                         {% endif %}
 
