--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -123,81 +123,10 @@ button:focus {
    <div class="container mt-5">
       <div class="row d-flex justify-content-center align-items-center">
          <div class="col-md-8">
-            {% comment %} <form id="regForm" method="POST"> {% endcomment %}
-                <form id="regForm">
-
-               <h1 id="register">Survey Form</h1>
-               <div class="all-steps" id="all-steps">
-                   <a onclick="surTab(0)"> 
-                       <span class="step">
-                       <i class="fa fa-user"></i>
-                   </span>
-                   </a>
-                   <a onclick="surTab(1)"> 
-                       <span class="step">
-                       <i class="fa fa-unlock-alt"></i>
-                   </span>
-                   </a>
-                   <a onclick="surTab(2)"> 
-                       <span class="step">
-                       <i class="fa fa-map-marker"></i>
-                   </span>
-                   </a>
-                   <a onclick="surTab(3)"> 
-                       <span class="step">
-                       <i class="fa fa-envelope"></i>
-                   </span>
-                   </a>
-               </div>
-
-               <div class="tab">
-                  <h6>Введите ваше имя</h6>
-                  <p>
-                      <input placeholder="Имя" oninput="this.className = ''" id="name">
-                      <br>
-                      <br>
-                      <input placeholder="Фамилия" oninput="this.className = ''" id="surname">
-                  </p>
-                  <h7>уже есть аккаунт? <a href="../login/">войди в него</a></h7>
-               </div>
-                <div class="tab" id="2">
-                  <h6>Введите пароль</h6>
-                  <p>
-                      <input placeholder="Логин" oninput="this.className = ''" id="login">
-                      <br>
-                      <br>
-                      <input placeholder="Пароль" type="password" oninput="this.className = ''" id="password">
-                      <br>
-                      <br>
-                      <input placeholder="Подтвердите пароль" type="password" oninput="this.className = ''" id="sug_password">
-                  </p>
-               </div>
-               <div class="tab">
-                  <h6>Введите ваш город</h6>
-                  <p>
-                      <input placeholder="Город" oninput="this.className = ''" id="city">
-                  </p>
-               </div>
-               <div class="tab">
-                  <h6>Введите вашу данные</h6>
-                  <p>
-                      <input placeholder="Почта" oninput="this.className = ''" id="email">
-                      <br>
-                      <br>
-                      <input placeholder="Номер телефона" oninput="this.className = ''" id="phone">
-                  </p>
-               </div>
-               <div style="overflow:auto;" id="next-previous">
-                  <div style="float:right;">
-                      <button type="button" id="prevBtn" onclick="nextPrev(-1)">
-                        <i class="fa fa-angle-double-left"></i>
-                      </button>
-                        {% comment %} {% csrf_token %} {% endcomment %}
-                      <button type="button" id="nextBtn" onclick="nextPrev(1)">
-                        <i class="fa fa-angle-double-right"></i>
-                      </button>
-                  </div>
-               </div>
+            <form method="POST">
+                {{ user_form.as_p }}
+                {% csrf_token %}
+                <p><input type="submit" value="Create my account"></p>
             </form>
          </div>
       </div>
