--- a/bizopt/BO/templates/edit.html
+++ b/bizopt/BO/templates/edit.html
@@ -1,4 +1,4 @@
-{% extends "menu.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 
@@ -155,6 +155,6 @@
             document.getElementById('creator').style.display = 'inline-block';
         }
     }
-</script
+</script>
 </html>
 {% endblock %}
